[metadata]
name = mini-specs
description = Slice of the Ethereum specification
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
url = https://github.com/SamWilsn/mini-specs
license_files =
    LICENSE.md
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

[options]
packages =
    ethereum
    ethereum/utils
    ethereum/crypto
    ethereum/homestead
    ethereum/homestead/utils
    ethereum/homestead/vm
    ethereum/homestead/vm/instructions
    ethereum/homestead/vm/precompiled_contracts
    ethereum/dao_fork
    ethereum/dao_fork/utils
    ethereum/dao_fork/vm
    ethereum/dao_fork/vm/instructions
    ethereum/dao_fork/vm/precompiled_contracts


package_dir =
    =src

python_requires = >=3.10
install_requires =
    pycryptodome>=3,<4
    coincurve>=18,<19
    typing_extensions>=4
    ethereum @ git+https://github.com/ethereum/execution-specs.git@docc

[options.extras_require]
doc =
    docc>=0.1.0,<0.2.0
    fladrif>=0.2.0,<0.3.0

# vim: set ft=dosini:
